# tfpin

./: .tfpin.example.toml  Cargo.toml  README.md  RELEASING.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  hcl_nav.rs  main.rs
src/checks/: backend.rs  forbidden_blocks.rs  mod.rs  modules.rs  providers.rs  terraform_version.rs
tests/: cli.rs
tests/fixtures/acme_bad/: .tfpin.toml
tests/fixtures/acme_bad/platform/cloud/wrong/: backend.tf  refactoring.tf  versions.tf
tests/fixtures/acme_bad/platform/stack/badmod/: vpc.tf
tests/fixtures/acme_good/: .tfpin.toml
tests/fixtures/acme_good/platform/cloud/confluent/: backend.tf  main.tf  versions.tf
tests/fixtures/acme_good/platform/cloud/confluent/.terraform/modules/: junk.tf
tests/fixtures/acme_good/platform/secrets/: backend.tf  main.tf  providers.tf  versions.tf
tests/fixtures/acme_good/platform/stack/prod-aws-us-west-1/: backend.tf  versions.tf  vpc.tf
tests/fixtures/globex_good/: .tfpin.toml
tests/fixtures/globex_good/aws/globex/: backend.tf  versions.tf
tests/fixtures/globex_good/hetzner/globex/: backend.tf  versions.tf
tests/fixtures/parse/: .tfpin.toml  aliases.tf  comments.tf  for_each.tf  heredoc.tf
tests/fixtures/parse_error/: .tfpin.toml  broken.tf
